www/trunk/homepage.css
body,
html 
{
margin:0;
padding:0;
color:black;
background:white;
}

#wrap 
{
width:81em;
margin:0 auto;
margin-top: 2em;
background:white;
border: 0.1em groove navy;
padding:1em;
}

#title
{
text-align:center;
text-transform:uppercase;
font-family:arial;
font-size:x-large;
font-weight:bold;
color:navy;
}

#nav
{
border: .1em solid navy;
border-style:solid;
border-width:.1em;
padding:1em;
background-color:#ffa20f;
}

#nav ul
{
margin:0;
padding:0;
list-style:none;
}

#nav li
{
display:inline;
margin-bottom:0;
padding:0;
}

#feedreader
{
height: 27.4em;
width: 47.5em;
margin: 1em auto;
border: .1em groove navy;
padding: 1em;
float:  left;
background-color:#ffa20f;
}

#userspace
{
height: 27.5em;
width: 28em;
margin: 1em auto;
border: .1em groove navy;
padding: 1em;
float:  right;
background-color:#ffa20f;
}

#main
{
float:left;
padding:1em;
height:25em;
width:10em;
border: .1em solid navy;
margin-right: 1em;
background-color: white;
}

#sidebar
{
float:left;
width:30em;
padding:1em;
height:25em;
border: .1em solid navy;
border-style: groove;
background-color: white;
}

#footer
{
border: .1em solid navy;
clear:both;
padding: 1em;
height:2.2em;
background-color:#ffa20f;
}

#footerLeft
{
float:left;
text-align:left;
background-color: white;
padding: 0.5em;
border: .1em groove navy;
}

#footerRight
{
float:right;
text-align:right;
background-color: white;
padding: 0.5em;
border: .1em groove navy;
}

.validated
{
height:31px;
width:88px;
position:absolute;
bottom:5px;
right:5px;
}

li
{
list-style: none;
margin: 0 auto 0 auto;
padding: 0;
text-align: left;
}

ul
{
margin: 0;
padding: 0;
}

